primitives/runtime-interface/tests/ui/no_generic_parameters_trait.rs
use sp_runtime_interface::runtime_interface;

#[runtime_interface]
trait Test<T> {
	fn test() {}
}

fn main() {}
